Update build.gradle
still working through getting tests to pass in code space